# opera

./: .gitignore  CMakeLists.txt  Consumer.cpp  Producer.cpp  README.md  README.txt
.github/workflows/: ci.yml  coverage.yml
cmake/: FindMosquitto.cmake  config.hpp.cmake
include/: algebra3d.hpp  barrier.hpp  body.hpp  broker.hpp  callback_queue.hpp  command_line_interface.hpp  comunication_layer_kafka.hpp  declarations.hpp  deserialisation.hpp  discrete_state.hpp  geometry.hpp  handle.hpp  interval.hpp  kafka.hpp  logging.hpp  macros.hpp  memory.hpp  memory.tpl.hpp  mqtt.hpp  packet.hpp  point.hpp  progress_indicator.hpp  runtime.hpp  serialisation.hpp  state.hpp  thread.hpp  utility.hpp  verification.hpp
include/websocket/: client_ws.hpp  server_ws.hpp  websocket.hpp
profile/: CMakeLists.txt  profile.hpp  profile_algebra.cpp  profile_barrier.cpp  profile_body.cpp  profile_deserialisation.cpp  profile_geometry.cpp  profile_serialisation.cpp  profile_state.cpp  profile_verification.cpp  stopwatch.hpp
resources/json/examples/notification/: notification0.json
resources/json/presentation/: human0.json  robot0.json
resources/json/scenarios/: presentation_human.json
resources/json/scenarios/collision1/h0/: 1.json  100.json  102.json  104.json  105.json  109.json  111.json  114.json  115.json  116.json  12.json  122.json  128.json  129.json  131.json  132.json  134.json  137.json  14.json  140.json  141.json  143.json  145.json  146.json  148.json  150.json  152.json  155.json  156.json  157.json  158.json  16.json  160.json  161.json  168.json  169.json  17.json  170.json  174.json  176.json  (+144 more)
resources/json/scenarios/collision2/h0/: 10.json  100.json  1000.json  1002.json  1005.json  1009.json  1011.json  1013.json  1014.json  1016.json  1019.json  1020.json  1021.json  1024.json  1025.json  1029.json  1030.json  1032.json  1038.json  1039.json  1041.json  1043.json  1044.json  1051.json  1052.json  1053.json  1056.json  1057.json  1060.json  1062.json  1065.json  1067.json  1069.json  107.json  1071.json  108.json  109.json  11.json  113.json  115.json  (+502 more)
resources/json/scenarios/collision3/h0/: 1.json  10.json  1000.json  1002.json  1003.json  1004.json  1008.json  1009.json  1010.json  1011.json  1013.json  1017.json  1018.json  1019.json  1022.json  1023.json  1024.json  1028.json  1029.json  103.json  1030.json  1032.json  1034.json  1035.json  1037.json  1038.json  1039.json  104.json  1043.json  1044.json  1048.json  1049.json  1051.json  1052.json  1056.json  106.json  1061.json  1065.json  1068.json  107.json  (+853 more)
resources/json/scenarios/human/: presentation.json
resources/json/scenarios/human/collision1/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+342 more)
resources/json/scenarios/human/collision2/: 1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  1033.json  (+1031 more)
resources/json/scenarios/human/collision3/: 1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  1033.json  (+2983 more)
resources/json/scenarios/human/nocollision/: 1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  1033.json  (+4219 more)
resources/json/scenarios/nocollision/h0/: 1.json  1001.json  1004.json  1005.json  1008.json  1009.json  1014.json  1016.json  1018.json  1020.json  1022.json  1024.json  1026.json  1027.json  103.json  1030.json  1032.json  1033.json  1034.json  1035.json  1036.json  1038.json  1039.json  (+1978 more)
resources/json/state/: robot0.json
resources/kafka/: delete_topics.sh  kafka_close.sh  kafka_launch.sh  server.properties
scenarios/: CMakeLists.txt  scenario_nocollision.cpp  scenario_nocollision_receiver.cpp  scenario_nocollision_sender.cpp  scenario_nocollision_ws.cpp
scripts_kafka/: delete_topics.sh  kafka_launch.sh
src/: CMakeLists.txt  barrier.cpp  body.cpp  broker.cpp  command_line_interface.cpp  comunication_layer_kafka.cpp  deserialisation.cpp  discrete_state.cpp  geometry.cpp  kafka.cpp  logging.cpp  memory.cpp  mqtt.cpp  opera.cpp  operad.cpp  packet.cpp  serialisation.cpp  state.cpp  thread.cpp  verification.cpp  websocket.cpp
test/: CMakeLists.txt  test.hpp  test_algebra.cpp  test_barrier.cpp  test_body.cpp  test_broker.cpp  test_broker_access.hpp  test_callback_queue.cpp  test_command_line_interface.cpp  test_comunication_layer_kafka.cpp  test_deserialisation.cpp  test_discrete_state.cpp  test_geometry.cpp  test_interval.cpp  test_kafka.cpp  test_logging.cpp  test_memory.cpp  test_mqtt.cpp  test_mqtt_old.cpp  test_mqtt_publish.cpp  test_mqtt_subscribe.cpp  test_packet.cpp  test_point.cpp  test_scenarios.cpp  test_serialisation.cpp  test_state.cpp  test_thread.cpp  test_verification.cpp  test_websocket.cpp  test_websocket_client.cpp  test_websocket_server.cpp
(+92691 files in other folders)
